-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sat, Apr 18, 2009
---------------------------------------------------------------------
- Scraped the idea of demo factories -- fixtures are easier to use and maintain.
- Updated demo fixtures and crm:demo:load task to simulate user activities and recently viewed items.

Fri, Apr 17, 2009
---------------------------------------------------------------------
- Back from LA and UCSB.

Thu, Apr 16, 2009
---------------------------------------------------------------------
- More work on demo factories: loading users and accounts.

Wed, Apr 15, 2009
---------------------------------------------------------------------
- Creating, updating, or deleting core assets also updates recently viewed items list.

Tue, Apr 14, 2009
---------------------------------------------------------------------
- Fixed missing uuid generation caused by observing models.

Mon, Apr 13, 2009
---------------------------------------------------------------------
- Harv Ecker is up in San Francisco tonight.

Sun, Apr 12, 2009
---------------------------------------------------------------------
- Initial implementation of recently visited items.

Sat, Apr 11, 2009
---------------------------------------------------------------------
- Lovely IRS weekend.

Fri, Apr 10, 2009
---------------------------------------------------------------------
- Added activity tracking for recently viewed items.
- Added activity named scopes to select records by user and action.

Thu, Apr 9, 2009
---------------------------------------------------------------------
- Fixed activity time-stamp format in Dashboard.

Wed, Apr 8, 2009
---------------------------------------------------------------------
- Created Activity model, related table, and factory.
- Basic initial implementation of activity observers and recent activity.
- Created specs for activity observers.

Tue, Apr 7, 2009