@@ -3,13 +3,15 @@
     .tools
       %small= activity.created_at.to_s(:mmddhhss).capitalize
     %tt
-      = activity.user.full_name + " " + activity.action + " " + activity.subject_type.downcase
+      = activity.user.full_name
+      = activity.action + (activity.action != "commented" ? " " : " on ")
+      = activity.subject_type.downcase
       - if activity.subject
         - if activity.subject.respond_to?(:full_name)
           = link_to(activity.subject.full_name, polymorphic_url(activity.subject))
         - elsif activity.subject_type != "Task"
           = link_to(activity.subject.name, polymorphic_url(activity.subject))
         - else
-          = activity.subject.name # Individual tasks have no landing pages where we could link to.
+          %font{:color => :black}= activity.subject.name # Individual tasks have no landing pages where we could link to.
       - else
-        = activity.info
+        = activity.info # Use info if the subject has been deleted.
